001-springboot-demo-helloworld/hello-world-helm/templates/service-app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service-app1
spec:
  #type: NodePort
  selector:
    app: helloworld-helm-deployment-app1
  ports:
    - protocol: TCP
      port: 443 # 前端访问的端口
      targetPort: 8443 # Spring Boot 应用监听的端口
