001-springboot-demo-helloworld/hello-world-helm/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    #nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    #nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "false"
    #nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    #nginx.ingress.kubernetes.io/auth-tls-secret: "default/ca-secret"
spec:
  tls:
    - hosts:
        - 192.168.42.111
      secretName: springboot-tls
  rules:
    - http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: helloworld-service-app1
                port:
                  number: 443
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: helloworld-service-app2
                port:
                  number: 443
